--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -139,7 +139,7 @@
         top: -100%;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         overflow: auto;
         display: flex;
         background-color: $light;
