--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -3,7 +3,8 @@
     justify-content: center;
     flex-direction: column;
     gap: 32px;
-    overflow: hidden;
+    //overflow: hidden;
+   
     &__btn {
         padding: 0px 80px;
         border-radius: 32px;
@@ -25,59 +26,82 @@
     .swiper-container {
         }
         .swiper{
-            // width: 790px;
-            width: 374px;
+            // // // width: 790px;
+            //  width: 374px;
             overflow: visible;
-            
+            width: 100%;
+            //width: 474px;
+            width: 60.7%;
         }
         .swiper-wrapper {
-            height: 310px;
+        height: 310px;
+          
         }
         .swiper-slide {
         //   width: 374px !important;
-          height: 310px;
+         
         //   position: absolute;
         //   top: 0;
           transition: all 0.3s;
-        transform: translateX(-250%) !important;
-           
+            transform: translateX(-225%) !important;
+           display: flex;
+           justify-content: flex-end;
+          
         &-active {
-            transform: translate(0, 25%) !important;
+            transform: translate(-9%, 20%) !important;
             // position: absolute;
              z-index: 4;
             //  left: 25%;
            
         }
         &-prev {
-        //   left: 0;
-            transform: translateX(50%) !important
+            transform: translateX(65%) !important;
         }
         &-next {
-        //   right: 0;
-            transform: translateX(-50%) !important
-            
+            transform: translate(-50%, -8%) !important;
+            width: 78.94% !important;
+            .slide-image {
+                padding-bottom: 82%;
+               img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+                object-position: right;
+               }
+            }
+          
         }
         &-next:first-child{
-            transform: translateX(250%) !important
+            transform: translateX(326%) !important
         }
         &-prev,
         &-next {
             // transform: scale(1.1) translate3d(25% , 0px, -155px) rotateX(0deg)
             // rotateY(2.9898deg) !important;
+            
         }
         }
         .slide-image {
           position: relative;
           width: 100%;
-          height: 310px;
+        
+          &_small {
+            width: 374px;
+           
+          }
            img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-            object-position: right;
+            // position: absolute;
+            // width: 100%;
+            // height: 100%;
+            // top: 0;
+            // left: 0;
+            // object-fit: cover;
+            // object-position: right;
+            max-width: 100%;
+           
            }
         }
         .swiper-navigation {
