--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -23,28 +23,12 @@
     }
 }
 
+.icon-chevronLeft:before {
+  content: "\e900";
+}
+.icon-chevronRight:before {
+  content: "\e901";
+}
 .icon-cross:before {
-    content: "\e900";
-  }
-  .icon-arrow-down:before {
-    content: "\e901";
-  }
-  .icon-arrow-left:before {
-    content: "\e902";
-  }
-  .icon-arrow-right:before {
-    content: "\e903";
-  }
-  .icon-menu:before {
-    content: "\e904";
-    color: $purple;
-  }
-  .icon-menu-open:before {
-    content: "\e905";
-  }
-  .icon-play:before {
-    content: "\e906";
-  }
-  .icon-point:before {
-    content: "\e907";
-  }
+  content: "\e902";
+}
