--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,131 +1,163 @@
 .main-section {
-		height: 100vh;
-		display: flex;
+	height: 100vh;
+	display: flex;
+	position: relative;
+	padding-top: 30px;
+	background: url('@img/background.jpg') 0px 132px no-repeat;
+	background-size: contain;
+
+	@media (max-width: 767.98px) {
+		background: url('@img/background-mobile.png') 0px 140px no-repeat;
+		background-size: contain;
+	}
+
+	@media (min-width: 767.98px) {
+		@include adaptiv (padding-top, 137, 60, 1);
+	}
+
+	&__container {}
+
+	&__body {
+		display: grid;
+		grid-template-columns: 31.5% 1fr;
+		//gap: 20px;
 		position: relative;
-		@include adaptiv (padding-top, 137, 24, 1);
-		&__container {
-			
-		}
 
-		&__body {
-			display: grid;
-			grid-template-columns: 31.5% 68.5%;
-			//gap: 20px;
-			position: relative;
-			
-			@media (max-width: 767.98px) {
-				grid-template-columns: 1fr;
+		@media (max-width: 1024.98px) {
+			grid-template-columns: 1fr;
+		}
+	}
+
+	&__col {
+		&:last-child {
+			@include adaptiv (padding-top, 107, 20, 1);
+
+			@media (max-width: 425px) {
+				margin: 0 -15px;
 			}
 		}
 
-		&__col {
-			&:last-child {
-				padding-top: 107px;
-			}	
+	}
+
+	&__title {
+		color: #000;
+		font-family: Merriweather;
+		font-weight: 700;
+		line-height: 100%;
+		max-width: 360px;
+		@include adaptiv (font-size, 55, 36, 1);
+		position: relative;
+
+		@media (max-width: 425.98px) {
+			max-width: 270px;
 		}
 
-		&__title {
-			color: #000;
-			font-family: Merriweather;
-			font-weight: 700;
-			line-height: 100%;
-			max-width: 360px;
+		@media (min-width: 1024px) {
 			margin-bottom: 180px;
-			@include adaptiv (font-size, 55, 36, 1);
-			position: relative;
-			@media (max-width: 425.98px) {
-				max-width: 270px;
-			}
 		}
+	}
 
-		&__info {
-		}
+	&__info {}
 
-		&__decor {
-			background: url('@img/background.jpg') 0px 127px no-repeat;
-			background-size: contain;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: -1;
-			top: 0;
-			left: 0;
-			@media (max-width: 767.98px) {
-				background: url('@img/background-mobile.jpg') 0px 140px no-repeat;
-				background-size: contain;
-			}
-		}
+	&__decor {
+		// background: url('@img/background.jpg') 0px 132px no-repeat;
+		// background-size: contain;
+		//  position: absolute;
+		//  width: 100%;
+		//  height: 100%;
+		//  z-index: -1;
+		//  top: 132px;
+		//  left: 0;
+
+		// @media (max-width: 767.98px) {
+		// 	background: url('@img/background-mobile.png') 0px 140px no-repeat;
+		// 	background-size: contain;
+		// }
+	}
 }
+
 .info-block {
+	display: flex;
+	flex-direction: column;
+	gap: 32px;
+
+	@media (max-width: 1024px) {
+		display: none;
+	}
+
+	&__item {
 		display: flex;
-		flex-direction: column;
-		gap: 32px;
-		@media (max-width: 767.98px) {
-			display: none;
+		gap: 30px;
+		align-items: center;
+		border: 1px solid transparent;
+		&:hover {
+			border: 1px solid purple;
+			border-radius: 5px;
 		}
-		&__item {
-			display: flex;
-			gap: 30px;
-			align-items: center;
-		}
+	}
 
-		&__icon {
-		}
+	&__icon {}
 
-		&__text {
-			color: $purple;
-			font-size: 18px;
-			font-family: Roboto;
-			text-decoration-line: underline;
-		}
+	&__text {
+		color: $purple;
+		font-size: 18px;
+		font-family: Roboto;
+		text-decoration-line: underline;
+	}
 }
+
 .disclaimer {
-		position: fixed;
-		left: 0;
-		bottom: 0;
-		width: 100%;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	opacity: 0.699999988079071;
+
+	@media (max-width: 767.98px) {
+		bottom: 50px;
+	}
+
+	&__body {
+
+		padding: 30px 55px 15px 55px;
+		border-radius: 18px;
+		background: #F9F9F9;
+
+		@media (max-width: 1024.98px) {
+			padding: 9px;
+
+		}
+
+	}
+
+	&__text {
+		color: #242424;
+		font-size: 34px;
+		font-family: Roboto;
+		font-weight: 300;
+		line-height: 40px;
+		letter-spacing: -1.36px;
+		text-transform: uppercase;
 		opacity: 0.699999988079071;
-		@media (max-width: 767.98px) {
-			bottom: 50px;
-		}
-		&__body {
-			
-			padding: 30px 55px 15px 55px;
-			border-radius: 18px;
-			background: #F9F9F9;
-			@media (max-width: 1024.98px) {
-				padding: 9px;
-				
-			}
-			
+		position: relative;
+		display: flex;
+		gap: 10px;
+
+		@media (max-width: 1024.98px) {
+			font-size: 12px;
+			line-height: 15px;
+			letter-spacing: -0.48px;
 		}
 
-		&__text {
-			color: #242424;
-			font-size: 34px;
-			font-family: Roboto;
-			font-weight: 300;
-			line-height: 40px;
-			letter-spacing: -1.36px;
-			text-transform: uppercase;
-			opacity: 0.699999988079071;
-			position: relative;
-			display: flex;
-			gap: 10px;
-			@media (max-width: 1024.98px) {
-				font-size: 12px;
-				line-height: 15px;
-				letter-spacing: -0.48px;
-			}	
-			.icon-cross {
-				&:hover {
-					cursor: pointer;
-				}
-				&::before {
-					font-size: 25px;
-					color: #A7A7A7;
-				}
+		.icon-cross {
+			&:hover {
+				cursor: pointer;
+			}
+
+			&::before {
+				font-size: 25px;
+				color: #A7A7A7;
 			}
 		}
+	}
 }
-
