--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -2,9 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 32px;
-    //overflow: hidden;
-   
+    @include adaptiv (gap, 32, 12, 1);
     &__btn {
         padding: 0px 80px;
         border-radius: 32px;
@@ -15,119 +13,131 @@
         align-items: center;
         justify-content: center;
         align-self: center;
-        
+        transition: all 0.5s ease 0s;
+        &:hover {
+         opacity: 30%;
+        }
+        @media (max-width: 1024px) {
+            border: 1px solid #5B0E58;
+            color: #5B0E58;
+        }
+        @media (max-width: 767.98px) {
+            padding: 0 25px;
+            height: 34px;
+        }
     }
     .swiper-slide-shadow-left,
-  .swiper-slide-shadow-right {
-    display: none !important;
-  }
-
-
-    .swiper-container {
-        }
-        .swiper{
-            // // // width: 790px;
-            //  width: 374px;
+    .swiper-slide-shadow-right {
+        display: none !important;
+    }
+    .swiper {
+        width: 374px;
+        @media (min-width: 767.98px) {
             overflow: visible;
+        }
+        @media (max-width: 425px) {
+            @include adaptiv (width, 374, 320, 1);
+        }
+    }
+    .swiper-slide {
+        transition: all 0.3s;
+        @media (min-width: 767.98px) {
+            transform: translateX(-250%) !important;
+            &-active {
+                transform: translate(0, 25%) !important;             
+                z-index: 4;
+            }
+            &-prev {
+                transform: translateX(50%) !important
+            }
+            &-next {
+                transform: translateX(-50%) !important
+            }
+            &-next:first-child {
+                transform: translateX(250%) !important
+            }
+        }
+
+    }
+
+    .slide-image {
+        position: relative;
+        width: 100%;
+        padding-bottom: 83%;
+        &_small {
+            @media (max-width: 425px) {
+                max-width: 260px;
+                margin: 0 auto;
+            }
+        }
+   
+        @media (max-width: 425px) {
+            height: 216px;
+            padding-bottom: 0px;
+            &:not(.slide-image_small) {
+                img {
+                    left: -10%;
+            }
+        }
+        }
+        img {
+            position: absolute;
             width: 100%;
-            //width: 474px;
-            width: 60.7%;
-        }
-        .swiper-wrapper {
-        height: 310px;
-          
-        }
-        .swiper-slide {
-        //   width: 374px !important;
-         
-        //   position: absolute;
-        //   top: 0;
-          transition: all 0.3s;
-            transform: translateX(-225%) !important;
-           display: flex;
-           justify-content: flex-end;
-          
-        &-active {
-            transform: translate(-9%, 20%) !important;
-            // position: absolute;
-             z-index: 4;
-            //  left: 25%;
+            height: 100%;
+            top: 0;
+            left: 0;
            
-        }
-        &-prev {
-            transform: translateX(65%) !important;
-        }
-        &-next {
-            transform: translate(-50%, -8%) !important;
-            width: 78.94% !important;
-            .slide-image {
-                padding-bottom: 82%;
-               img {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
+            object-position: right;
+            @media (min-width: 425.98px) {
                 object-fit: cover;
-                object-position: right;
-               }
             }
-          
         }
-        &-next:first-child{
-            transform: translateX(326%) !important
+    }
+    .swiper-navigation {
+     
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        @include adaptiv (gap, 30, 15, 1);
+        @media (min-width: 425px) {
+            margin-top: 74px;
         }
-        &-prev,
-        &-next {
-            // transform: scale(1.1) translate3d(25% , 0px, -155px) rotateX(0deg)
-            // rotateY(2.9898deg) !important;
+       
             
-        }
-        }
-        .slide-image {
-          position: relative;
-          width: 100%;
         
-          &_small {
-            width: 374px;
-           
-          }
-           img {
-            // position: absolute;
-            // width: 100%;
-            // height: 100%;
-            // top: 0;
-            // left: 0;
-            // object-fit: cover;
-            // object-position: right;
-            max-width: 100%;
-           
-           }
-        }
-        .swiper-navigation {
-            margin-top: 94px;
-          
-           justify-content: center;
-            display: flex;
-            align-items: center;
-            gap: 30px;
+    }
+    .swiper-button-prev {
+       
+       &:active {
+        transform: translate(-2px, 2px);
+       } 
+    }
+    .swiper-button-next {
+        &:active {
+            transform: translate(-2px, 2px);
+           } 
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        width: 68px;
+        height: 68px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        transition: all 0.5s ease 0s;
+        @media (max-width: 1024px) {
+            width: 34px;
+            height: 34px;
             svg {
-              
+                path,
+                circle {
+                    stroke: #5B0E58;
+                }
+                width: 34px;
+                height: 34px;
             }
         }
-        .swiper-button-prev, 
-        .swiper-button-next {
-            width: 68px;
-            height: 68px;
-            border-radius: 50%;
-            border: 1px solid $light;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position:  relative;
-            
-            &::after {
-                display: none;
-            }
-        }
+    }
 }
