--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,12 +17,16 @@ body {
     margin: 0 auto;
    
 }
+
 .wrapper {
     width: 100%;
     min-height: 100%;
     display: flex;
     flex-direction: column;
-   // overflow: hidden;
+   overflow: hidden;
+}
+main {
+    flex: 1 1 auto;
 }
 [class*="__container"] {
     max-width: 1170px;
