--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,6 +90,7 @@
 		gap: 30px;
 		align-items: center;
 		border: 1px solid transparent;
+		transition: all 0.5s ease 0s;
 		&:hover {
 			border: 1px solid purple;
 			border-radius: 5px;
