--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,12 +3,12 @@
 	display: flex;
 	position: relative;
 	padding-top: 30px;
-	background: url('@img/background.jpg') 0px 132px no-repeat;
-	background-size: contain;
+	background: url('@img/background.jpg') 0px 132px / contain no-repeat;
+	
 
 	@media (max-width: 767.98px) {
-		background: url('@img/background-mobile.png') 0px 140px no-repeat;
-		background-size: contain;
+		background: url('@img/background-mobile.png') 0px 140px / contain no-repeat;
+	
 	}
 
 	@media (min-width: 767.98px) {
@@ -20,7 +20,6 @@
 	&__body {
 		display: grid;
 		grid-template-columns: 31.5% 1fr;
-		//gap: 20px;
 		position: relative;
 
 		@media (max-width: 1024.98px) {
@@ -59,21 +58,6 @@
 
 	&__info {}
 
-	&__decor {
-		// background: url('@img/background.jpg') 0px 132px no-repeat;
-		// background-size: contain;
-		//  position: absolute;
-		//  width: 100%;
-		//  height: 100%;
-		//  z-index: -1;
-		//  top: 132px;
-		//  left: 0;
-
-		// @media (max-width: 767.98px) {
-		// 	background: url('@img/background-mobile.png') 0px 140px no-repeat;
-		// 	background-size: contain;
-		// }
-	}
 }
 
 .info-block {
@@ -96,7 +80,6 @@
 			border-radius: 5px;
 		}
 	}
-
 	&__icon {}
 
 	&__text {
