--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -2,7 +2,16 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    @include adaptiv (gap, 32, 12, 1);
+    overflow: hidden;
+    position: relative;
+    left: -70px;
+    width: 100%;
+    @include adaptiv (padding-top, 107, 10, 1);
+    @media (max-width: 1024px) {
+        left: 0;
+        width: 100%;
+    }
+   
     &__btn {
         padding: 0px 80px;
         border-radius: 32px;
@@ -26,72 +35,94 @@
             height: 34px;
         }
     }
-    .swiper-slide-shadow-left,
+    .swiper-slide-shadow-left,  
     .swiper-slide-shadow-right {
-        display: none !important;
+        display: none;
     }
-    .swiper {
-        width: 374px;
-        @media (min-width: 767.98px) {
-            overflow: visible;
+    .swiper-wrapper {
+        display: flex;
+        position: relative;
+       
+     
+    }
+    @media (min-width: 767.98px) {
+        .swiper-slide-prev.slide-image_small {
+            transform:  translate3d(75%, 0px, -155.962px) rotateX(0deg) rotateY(2.9808deg) !important;
         }
-        @media (max-width: 425px) {
-            @include adaptiv (width, 374, 320, 1);
-            margin: 0 !important;
+       .swiper-slide-prev {
+            transform:  translate3d(63%, 0px, -155.962px) rotateX(0deg) rotateY(2.9808deg) !important;
+            cursor: pointer;
+        }
+        .swiper-slide-next.slide-image_big {
+            transform:  translate3d(-36%, 0px, -155.962px) rotateX(0deg) rotateY(2.9808deg) !important;
+        }
+     .swiper-slide-next {
+            transform:  translate3d(-50%, 0px, -155.962px) rotateX(0deg) rotateY(-2.9808deg) !important;     
+            cursor: pointer;
+        }
+       .swiper-slide-active {
+            transform:  translateY(25%) !important; 
+            transition: 300ms;
+            z-index: 3 !important;
+           position: relative;
         }
     }
-    .swiper-slide {
-        transition: all 0.3s;
-        @media (min-width: 767.98px) {
-            transform: translateX(-250%) !important;
-            &-active {
-                transform: translate(0, 25%) !important;             
-                z-index: 4;
-            }
-            &-prev {
-                transform: translateX(50%) !important
-            }
-            &-next {
-                transform: translateX(-50%) !important
-            }
-            &-next:first-child {
-                transform: translateX(250%) !important
-            }
-        }
-
-    }
-
     .slide-image {
         position: relative;
-        width: 100%;
-        padding-bottom: 83%;
-        &_small {
-            @media (max-width: 425px) {
-                max-width: 260px;
-                margin: 0 auto;
-            }
-        }
-   
         @media (max-width: 425px) {
-            height: 216px;
-            padding-bottom: 0px;
-            &:not(.slide-image_small) {
-                img {
-                    left: -10%;
-            }
+            transform: translateX(-20px);
         }
+       img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: contain;
+       }
+       @media (max-width: 768px) {
+        &_big,
+        &_small,
+        &_medium {
+            width: 100% !important;
+            flex-shrink: 0;
+            height: 310px;
+            @include adaptiv (height, 301, 216, 1);
         }
-        img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-           
-            object-position: right;
-            @media (min-width: 425.98px) {
-                object-fit: cover;
-            }
+
+       }
+       @media (min-width: 768px) {
+        &_big {
+           height: 315px;
+           flex-shrink: 0;
+           flex-grow: 0;
+           flex-basis: 54.3%;
+       }
+       &_small {
+          flex-basis: 42.9%;
+           height: 308px;
+           flex-shrink: 0;
+           flex-grow: 0;
+       }
+       &_medium {
+          flex-basis: 53.6%;
+           height: 302px;
+           flex-shrink: 0;
+           flex-grow: 0;
+       }
+       }
+       
+    }
+    .swiper-slide-next.slide-image_small {
+    @media (min-width: 920px) {
+        transform:  translate3d(-40%, 0px, -155.962px) rotateX(0deg) rotateY(-2.9808deg) !important; 
+    }
+       
+     
+    }
+    .swiper-slide-active.slide-image_small {
+        @media (min-width: 920px) {
+        transform:  translate(35%, 25%) !important; 
         }
     }
     .swiper-navigation {
@@ -102,6 +133,10 @@
         @include adaptiv (gap, 30, 15, 1);
         @media (min-width: 425px) {
             margin-top: 74px;
+            margin-bottom: 30px;
+        }
+        @media (max-width: 425px) {
+            margin-bottom: 12px;
         }
        
             
@@ -129,16 +164,18 @@
         position: relative;
         transition: all 0.5s ease 0s;
         @media (max-width: 1024px) {
-            width: 34px;
-            height: 34px;
             svg {
                 path,
                 circle {
                     stroke: #5B0E58;
                 }
-                width: 34px;
-                height: 34px;
+                
             }
+        }
+        @media (max-width: 768px) {
+            width: 34px;
+            height: 34px;
+           
         }
     }
 }
