--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,14 +7,14 @@
 @import "icons";
 @import "main";
 @import 'slider';
-@import '../../node_modules/swiper/swiper';
+//@import '../../node_modules/swiper/swiper';
 
 
 body {
     font-family: Roboto;
     font-size: 16px;
-    max-width: 1440px;
-    margin: 0 auto;
+    // max-width: 1440px;
+    // margin: 0 auto;
    
 }
 
@@ -23,7 +23,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-   overflow: hidden;
+   //overflow: hidden;
 }
 main {
     flex: 1 1 auto;
