--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,10 +1,10 @@
 .header {
     position: fixed;
     width: 100%;
-   
     left: 0;
     z-index: 5;
-    height: 117px;
+    @include adaptiv (height, 117, 50, 1);
+    background-color:white;
     @media (max-width: 767.98px) {
         background-color: #F9F9F9;
         bottom: 0;
@@ -116,33 +116,8 @@
        left: 0;
        right: 0;
        z-index: -1;
-       @media (min-width: 425px) {
-        background: 
-        url('@img/Vector 2.svg') 0px 7%, 
-        url('@img/Vector 3.svg') 0px 44%,
-        url('@img/Vector 4.svg') 0px 49%,
-        url('@img/Vector 5.svg') 0px 78%,
-        url('@img/Vector 6.svg') 0px 78%;
-        background-repeat: no-repeat;
-      
-       }
-       @media (min-width: 1024px) {
-        background-size: contain;
-       }
-       @media (max-width: 425px) {
-        background: 
-        url('@img/Vector-2-mobile.svg')0 127px, 
-        url('@img/Vector-3-mobile.svg') 0 224px,
-        url('@img/Vector-4-mobile.svg') 0 290px,
-        url('@img/Vector-5-mobile.svg') 0 370px,
-        url('@img/Vector-6-mobile.svg') 0 443px;
-        background-repeat: no-repeat;
-        background-size: contain;
-       };
     }
     &__body {
-      
-        
         transition: top 0.3s ease 0s;
         position: fixed;
         top: -100%;
@@ -154,6 +129,7 @@
         background-color: $light;
         .__container {
             width: 100%;
+            
         }
         &._active {
             top: 0;
@@ -163,16 +139,6 @@
             }
         }
 
-        // &::before {
-        //     content: '';
-        //     position: fixed;
-        //     width: 100%;
-        //     @include adaptiv (  height, 133, 120, 1);
-        //     top: 0;
-        //     left: -100%;
-        //     z-index: 2;
-        //     background-color:  $light;
-        // }
     }
 
     &__nav {
@@ -205,6 +171,81 @@
         &:hover,
         &:focus {
             color: $purple;
+        }
+    }
+}
+.decor-line {
+  position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
+   width: 100%;
+   svg {
+    max-width: 100% !important;
+    width: 100%;
+   }
+    path {
+        width: 100%;
+        stroke-dasharray: 2200;
+        stroke-dashoffset: 2200;
+       
+        @media (max-width: 425px) {
+            stroke-width: 2px;
+        }
+    }
+    &_1 {
+        @include adaptiv (top, 70, 30, 1);
+        //top: 7%;
+        svg {
+            height: 16%;
+        }
+        path {
+            animation: draw 10s linear infinite 2s;
+        }
+        
+    }
+    &_2 {
+        //top: 44%;
+        @include adaptiv (top, 386, 150, 1);
+        svg {
+            height: 3.2%;
+        }
+        path {
+            animation: draw 9s linear infinite 2.3s;
+        }
+    }
+    &_3 {
+        //top: 45%;
+        @include adaptiv (top, 395, 215, 1);
+        svg {
+            height: 8.7%;
+        }
+        path {
+            animation: draw 9s linear infinite 2.5s;
+        }
+    }
+    &_4 {
+        //top: 71%;
+        @include adaptiv (top, 591, 280, 1);
+        svg {
+            height: 10.9%;
+        }
+        path {
+            animation: draw 9.3s linear infinite 2.5s;
+        }
+    }
+    &_5 {
+        //top: 78%;
+        @include adaptiv (top, 659, 420, 1);
+        svg {
+            height: 4.9%;
+        }
+        path {
+            animation: draw 9.3s linear infinite 1.9s;
+        }
+    }
+    @keyframes draw {
+        50% {
+            stroke-dashoffset: 0;
         }
     }
 }
